log
Sat, May 17, 2025 12:00:23 PM: 
 sudoku.c | 48 ++++++++++++++++++++++++++++++++++++++++++++++++
 1 file changed, 48 insertions(+)
 tests:  6|2
total_score: 45/70
3f0e54c
Sat, May 17, 2025 12:01:12 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
112ddb5
Sat, May 17, 2025 12:09:14 PM: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:107:26: error: 'j' undeclared (first use in this function)
   for (int i = 0; i < 9; j++) {
                          ^
sudoku.c:107:26: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:108:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     for (int j = 0; j = 9; j++) {
     ^~~
cc1.exe: all warnings being treated as errors
a09886e
Sat, May 17, 2025 12:09:31 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:108:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     for (int j = 0; j = 9; j++) {
     ^~~
cc1.exe: all warnings being treated as errors
e59614c
Sat, May 17, 2025 12:10:30 PM: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_final':
sudoku.c:108:5: error: suggest parentheses around assignment used as truth value [-Werror=parentheses]
     for (int j = 0; j = 9; j++) {
     ^~~
cc1.exe: all warnings being treated as errors
46485f6
Sat, May 17, 2025 12:11:34 PM: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|2
total_score: 45/70
e29f8a5
